# special-broccoli

./: README.md  deploy.sh  docker-compose.yaml  package.json  pyproject.toml
.github/workflows/: cd.yaml  ci.yaml  drift_monitor.yaml  pr_automate.yaml  retrain.yaml  rollback.yaml
api_server/: Dockerfile  api_server.py
config/: config.yaml
data_processor/: Dockerfile  data_processor.py
docker/: api_server.Dockerfile  docker-compose-api-server.yaml  docker-compose-drift-monitor.yaml  docker-compose-retrain.yaml  drift_monitor.Dockerfile  retrain.Dockerfile
docs/: README.md  index.html  slides-operational.html  slides-smart-buildings.html
drift_monitor/: Dockerfile  check_file.sh  raise_issue.sh
models/: model.pkl
retrain/: train.py  train_model.py
retrainer/: Dockerfile  train.py  train_model.py
smart_buildings/: Untitled-1.ipynb  drift_monitor_test.py  logger.py
smart_buildings/api_server/: main.py  schema.py
smart_buildings/drift_monitor/: drift_monitor.py
smart_buildings/retrain/: drift_monitor.py  drift_monitor_test.py  train.py  trigger_retraining.py  utils.py
