[tool.poetry]
name = "special-broccoli"
version = "0.1.0"
description = ""
authors = ["Christian Hilscher <christian.hilscher@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
polars = "^0.20.3"
ipykernel = "^6.28.0"
lightgbm = "^4.2.0"
scikit-learn = "^1.3.2"
pydantic = "^2.5.3"
fastapi = "^0.108.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
