[tool.poetry]
name = "special-broccoli"
version = "0.1.0"
description = ""
authors = ["Christian Hilscher <christian.hilscher@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
polars = "^0.20.3"
lightgbm = "^4.2.0"
scikit-learn = "^1.3.2"
pydantic = "^2.5.3"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
requests = "^2.31.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
